p2/css/main.css
@media screen and (min-width: 320px){
  body {
    background-color: black;
  }
  p {
    color: white;
    text-align: center;
    font-size: 19px;
    margin-right: 60px;
    margin-left: 60px;
  }
  li {
    color: white;
  }
  img {
    align-content: center;
    width: 100%;
    height: auto;
  }
  h1 {
    color: white;
    text-align: center;
    font-size: 4rem;
  }
  h2 {
    color: white;
    font-size: 3rem;
  }
  h3 {
    color: white;
    font-size: 2rem;
  }
  h4 {
    color: white;
    font-size: 1.5rem;
  }
  .image {
    width: 500px;
    height: auto;
    float: left;
  }
  .image2 {
    width: 500px;
    height: auto;
    float: left;
  }
  .image3 {
    width: 1000px;
    height: auto;
    float: left;
  }
  .body {
  width: 500px;
  height: 500px;
  float: left;
  }
  .wheels {
  width: 500px;
  height: 500px;
  float: left;
  margin-left: 20px;
  margin-bottom: 20px;
  }
  .utero {
  width: 500px;
  height: 500px;
  float: left;
  margin-left: 20px;
  margin-bottom: 20px;
  }
  .flies {
  width: 500px;
  height: 500px;
  float: left;
  margin-left: 20px;
  margin-bottom: 20px;
  }
  .goodbye {
  width: 500px;
  height: 500px;
  float: left;
  margin-left: 20px;
  margin-bottom: 20px;
  }
}

